tests/neg-custom-args/captures/i21614.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21614.scala:12:12 ---------------------------------------
12 |  files.map((f: F) => new Logger(f)) // error, Q: can we make this pass (see #19076)?
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |            Found:    (f: F) ->{files.rd*} box Logger{val f²: File^?}^?
   |            Required: (f: box F^{files.rd*}) ->{fresh} box Logger{val f²: File^?}^?
   |
   |            where:    f  is a reference to a value parameter
   |                      f² is a value in class Logger
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21614.scala:15:12 ---------------------------------------
15 |  files.map(new Logger(_)) // error, Q: can we improve the error message?
   |            ^^^^^^^^^^^^^
   |Found:    (_$1: box File^{files*}) ->{files*} (ex$16: caps.Exists) -> box Logger{val f: File^{_$1}}^{ex$16.rd, _$1}
   |Required: (_$1: box File^{files*}) => box Logger{val f: File^?}^?
   |
   |Note that reference ex$16.rd
   |cannot be included in outer capture set ?
   |
   | longer explanation available when compiling with `-explain`
